data/derived/comb/progs/unify/prog3861.ml.out
Characters 8-14:
  let _ = digits -31243;;
          ^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int
